fix media header alignment

--- a/src/app/shared/components/media-header/media-header.component.css
+++ b/src/app/shared/components/media-header/media-header.component.css
@@ -1,17 +1,17 @@
 #media-header a{
   color: #12100B4D;
   font-weight: 500;
-  font-size: 25px;
+  font-size: clamp(15px, 1.5vw, 25px);
   line-height: 25px;
   letter-spacing: 0%;
 }
-#media-header a:nth-child(1),#media-header a:nth-child(2), #media-header a:nth-child(3){
+#media-header a:nth-child(1),#media-header a:nth-child(2){
   border-right: 1px solid #C0C0BD;
 }
 #media-header a.active{
   color: #128940;
   font-weight: 700;
-  font-size: 25px;
+  font-size: clamp(15px, 1.5vw, 25px);
   line-height: 25px;
   letter-spacing: 0%;
   text-decoration: underline;
